--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/wander.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="wander.png" />
-   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
     <title>WANDERLAND</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
 </html>
